force-app/main/default/objects/EventLocation__mdt/EventLocation__mdt.object-meta.xml
<CustomObject>
    <label>Event Location</label>
    <pluralLabel>Event Locations</pluralLabel>
</CustomObject>