force-app/main/default/objects/EventLocation__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>DeliveryEvent__mdt</referenceTo>
    <relationshipLabel>Event Locations</relationshipLabel>
    <relationshipName>Event_Locations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>