force-app/main/default/objects/EventLocation__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>DeliveryLocation__mdt</referenceTo>
    <relationshipLabel>Event Locations</relationshipLabel>
    <relationshipName>Event_Locations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>