force-app/main/default/objects/EventLocation__mdt/fields/ShipType__c.field-meta.xml
<CustomField>
    <fullName>ShipType__c</fullName>
    <label>ShipType</label>
    <referenceTo>ShipmentType__mdt</referenceTo>
    <relationshipLabel>Event Locations</relationshipLabel>
    <relationshipName>Event_Locations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>